@@ -10,12 +10,12 @@ package org.tybaco.ui.lib.stage;
  * it under the terms of the GNU Affero General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  * #L%
@@ -27,8 +27,8 @@ import javafx.event.EventHandler;
 import javafx.scene.input.MouseButton;
 import javafx.scene.robot.Robot;
 import javafx.stage.*;
+import org.tybaco.util.FastLatch;
 
-import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.locks.LockSupport;
 import java.util.function.Consumer;
 
@@ -36,18 +36,18 @@ public class StageLinuxBugListener implements EventHandler<WindowEvent> {
   @Override
   public void handle(WindowEvent event) {
     var window = (Window) event.getSource();
+    window.removeEventHandler(WindowEvent.WINDOW_SHOWN, this);
     if (window instanceof Stage s) {
       s.setAlwaysOnTop(true);
     }
-    window.removeEventHandler(WindowEvent.WINDOW_SHOWN, this);
-    new Thread(() -> {
+    Thread.startVirtualThread(() -> {
       doubleClick(window);
       LockSupport.parkNanos(10_000_000L);
       doubleClick(window);
       if (window instanceof Stage s) {
         Platform.runLater(() -> s.setAlwaysOnTop(false));
       }
-    }).start();
+    });
   }
 
   private void doubleClick(Window window) {
@@ -57,7 +57,7 @@ public class StageLinuxBugListener implements EventHandler<WindowEvent> {
   }
 
   private void robotAction(Window stage, Consumer<Robot> action) {
-    var latch = new CountDownLatch(1);
+    var latch = new FastLatch(1);
     Platform.runLater(() -> {
       try {
         var robot = new Robot();
@@ -68,11 +68,7 @@ public class StageLinuxBugListener implements EventHandler<WindowEvent> {
         latch.countDown();
       }
     });
-    try {
-      latch.await();
-    } catch (InterruptedException e) {
-      throw new IllegalStateException(e);
-    }
+    latch.await();
   }
 
   public static void install(Stage stage) {
